--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ and open the template in the editor.
         </div>
         <div class="login-box">
             <h3 style="color:white;">LOGIN</h3>
-            <form class="login-form">
-                <input type="text" id="username" name="username" placeholder="Username">
+            <form class="login-form" action="http://localhost:8080/outpass/login" method="post">
+                <input type="text" id="email" name="email" placeholder="Email">
                 <input type="password" id="password" name="password" placeholder="Password">
                 <input type="submit" id="submit" value="LOGIN">
             </form>
