--- a/student.html
+++ b/student.html
@@ -5,7 +5,7 @@
     <title>
         Student Profile
     </title>
-    <link rel="stylesheet" href="student.css">
+    <link rel="stylesheet" href="static/student.css">
 </head>
 
 <body>
