--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ and open the template in the editor.
     <title>LOGIN | Out-pass Management System</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css\styles.css">
 
     <script>
 
@@ -20,7 +20,7 @@ and open the template in the editor.
 <body>
     <div class="content">
         <div class="logo">
-            <img src="papertray.png" height="200px" width="200px">
+            <img src="images\papertray.png" height="200px" width="200px">
         </div>
         <div class="login-box">
             <h3 style="color:white;">LOGIN</h3>
